<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/change_pass"
        android:textSize="@dimen/app_title"
        android:gravity="center"
        android:textColor="@color/colorPrimary"/>

    <EditText
        android:paddingTop="@dimen/text_padding"
        android:id="@+id/updatepass_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/txt_size"
        android:inputType="textPassword"
        android:hint="@string/pass"/>

    <Button
        android:id="@+id/updatePass_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_update_pass"
        android:textAllCaps="false"
        android:textSize="@dimen/txt_title"
        android:textColor="@color/FCM_BLUE"/>

    <ProgressBar
        android:id="@+id/updatePass_progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginBottom="10dp"
        android:visibility="gone" />
    <TextView
        android:id="@+id/updatePass_cancel"
        android:paddingTop="@dimen/text_padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/txt_cancel"
        android:textSize="@dimen/app_title"
        android:textColor="@color/colorPrimary">
    </TextView>

</LinearLayout>