<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lnr_sackbar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:id="@+id/img"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/fcm_screen"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="@dimen/layout_margin"
            android:layout_marginRight="@dimen/layout_margin">

            <EditText
                android:paddingTop="@dimen/text_padding"
                android:id="@+id/edit_email"
                android:layout_width="match_parent"
                android:textSize="@dimen/txt_size"
                android:inputType="textEmailAddress"
                android:layout_height="wrap_content"
                android:hint="@string/email" />

            <EditText
                android:paddingTop="@dimen/text_padding"
                android:id="@+id/edit_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/txt_size"
                android:inputType="textPassword"
                android:hint="@string/pass"/>

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_login"
                android:textAllCaps="false"
                android:textSize="@dimen/txt_title"
                android:textColor="@color/FCM_BLUE"/>

            <TextView
                android:paddingTop="@dimen/text_padding"
                android:id="@+id/txt_forgot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_forgot"
                android:textSize="@dimen/txt_title"
                android:gravity="center"
                android:textColor="@color/FCM_BLUE"/>

            <TextView
                android:paddingTop="@dimen/text_padding"
                android:id="@+id/txt_register"
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:textSize="@dimen/txt_title"
                android:text="@string/txt_register"
                android:textColor="@color/FCM_BLUE"/>

            <ProgressBar
                android:id="@+id/progbar"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center|bottom"
                android:layout_marginBottom="10dp"
                android:visibility="gone" />
        </LinearLayout>

        <TextView
            android:paddingTop="@dimen/text_padding"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:textSize="@dimen/txt_title"
            android:text="@string/login_with"
            android:textColor="@color/FCM_BLUE"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="@dimen/layout_margin"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_gmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/text_padding"
                android:src="@drawable/ic_action_gmail"/>


            <ImageView
                android:id="@+id/img_fb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/text_padding"
                android:src="@drawable/ic_action_facebook"/>

            <ImageView
                android:id="@+id/img_linkedin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/text_padding"
                android:src="@drawable/ic_action_linkedin"/>

            <ImageView
                android:id="@+id/img_twitter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/text_padding"
                android:src="@drawable/ic_action_twitter"/>
        </LinearLayout>
    </LinearLayout>


</LinearLayout>